--- a/seldon/requirements.txt
+++ b/seldon/requirements.txt
@@ -1,5 +1,5 @@
 numpy==1.18.5
-scikit-learn==0.23.2
-tensorflow==2.3.1
-keras==2.4.3
-pillow==8.0.1
+scikit-learn==1.0.1
+tensorflow-gpu==2.7.0
+keras==2.7.0
+pillow==8.4.0
