Final LS commit

--- a/.neuro/live.yml
+++ b/.neuro/live.yml
@@ -188,17 +188,15 @@ jobs:
       pachctl config update context default --pachd-address ${PACHY_URI}
       echo "${PACHY_TOKEN}" | pachctl auth use-auth-token
 
-      pip install label-studio-sdk
-
       export DATA_PATH=${PROJECT}/data/Images
       COMPLETIONS=${LABEL_STUDIO_PROJECT}/completions
       # Pull dataset:
       pachctl get file ${PACHY_REPO}@master:/data/ -r -o ${PROJECT}/data/ | tee
 
-      if [[ -f "${PROJECT}/data//label_studio.sqlite3" ]];
+      if [[ -f "${PROJECT}/data/label_studio.sqlite3" ]];
       then
         echo Restoring existing label studio data
-        cp ${PROJECT}/data/label_studio.sqlite3 /label_studio/data/label_studio.sqlite3
+        cp ${PROJECT}/data/label_studio.sqlite3 /label-studio/data/label_studio.sqlite3
       else
         echo Initializing label studio
         label-studio init dogs --username test@neu.ro --password 12345678 \
@@ -217,7 +215,7 @@ jobs:
       pachctl start commit ${PACHY_REPO}@master
       pachctl put file -r ${PACHY_REPO}@master:data/Images/ -f ${DATA_PATH} | tee
       pachctl put file    ${PACHY_REPO}@master:data/result.json -f ${PROJECT}/data/result.json | tee
-      pachctl put file    ${PACHY_REPO}@master:data/label_studio.sqlite3 -f /label_studio/data/label_studio.sqlite3 | tee
+      pachctl put file    ${PACHY_REPO}@master:data/label_studio.sqlite3 -f /label-studio/data/label_studio.sqlite3 | tee
       pachctl finish commit ${PACHY_REPO}@master -m "Commit annotations for `ls ${COMPLETIONS} | wc -l` images"
 
       # Validate dataset:
