feat: Move  to secrets

--- a/.neuro/live.yml
+++ b/.neuro/live.yml
@@ -7,7 +7,7 @@ defaults:
   life_span: 1d
   env:
     # Those env vars will be assigned to every job in this flow
-    PACHY_URI: api.pachyderm.mlops.neu.ro:30650
+    PACHY_URI: secret:pachyderm-uri
     PACHY_REPO: dogs-demo
     PROJECT_GIT_REPO: git@github.com:neuro-inc/mlops-demo-oss-dogs.git
     PROJECT_GIT_BRANCH: ${{ git.branch }}
