--- a/.neuro/project.yml
+++ b/.neuro/project.yml
@@ -1,3 +1,3 @@
 id: mlops_demo_oss_dogs
-owner: alexeynaiden
-role: alexeynaiden/projects/mlops_demo_oss_dogs
+owner: andriikhomiak
+role: andriikhomiak/projects/mlops_demo_oss_dogs
