--- a/.neuro/live.yml
+++ b/.neuro/live.yml
@@ -7,10 +7,11 @@ defaults:
   life_span: 1d
   env:
     # Those env vars will be assigned to every job in this flow
-    PACHY_URI: pachyderm.green-hgx-2.org.neu.ro:30650
-    PACHY_REPO: dogs-demo
     PROJECT_GIT_REPO: git@github.com:neuro-inc/mlops-demo-oss-dogs.git
     PROJECT_GIT_BRANCH: ${{ git.branch }}
+    BUCKET_NAME: mlops-oss-demo-dogs
+    CREDENTIALS: mlops-demo-oss-dogs-credentials
+    MLFLOW_TRACKING_URI: https://demo-oss-dogs-mlflow-server--alexeynaiden.jobs.default.org.neu.ro
 
 volumes:
   remote_dataset:
@@ -31,7 +32,7 @@ volumes:
 
 images:
   train:
-    ref: image:/$[[ project.owner ]]/$[[ flow.flow_id ]]/train:21.5.13-pachyderm
+    ref: image:/$[[ project.owner ]]/$[[ flow.flow_id ]]/train:21.5.13
     dockerfile: $[[ flow.workspace ]]/Dockerfile
     context: $[[ flow.workspace ]]/
     build_preset: cpu-medium
@@ -41,63 +42,12 @@ images:
     context: $[[ flow.workspace ]]/
     build_preset: cpu-medium
   label_studio:
-    ref: image:/$[[ project.owner ]]/$[[ flow.flow_id ]]/label_studio:21.1.18-pachyderm
+    ref: image:/$[[ project.owner ]]/$[[ flow.flow_id ]]/label_studio:21.1.18
     dockerfile: $[[ flow.workspace ]]/label_studio/label_studio.Dockerfile
     context: $[[ flow.workspace ]]/label_studio
     build_preset: cpu-medium
 
 jobs:
-  create_pipeline:
-    name: $[[ flow.title ]]-create-pipeline
-    image: $[[ images.train.ref ]]
-    volumes:
-      - secret:/$[[ project.owner ]]/gh-rsa:/root/.ssh/id-rsa
-    params:
-      mlflow_storage:
-        descr: Storage path, where MLFlow server stores trained model binaries
-      mlflow_uri:
-        descr: MLFlow server URI
-      pachy_pipeline_name:
-        default: train-dogs
-        descr: MLFlow server URI
-    env:
-      EXPOSE_SSH: "yes"
-      PYTHONPATH: /usr/project
-      PROJECT: /usr/project
-      MLFLOW_STORAGE: ${{ params.mlflow_storage }}
-      MLFLOW_URI: ${{ params.mlflow_uri }}
-      NEURO_PASSED_CONFIG: secret:platform-config
-      TRAIN_IMAGE_REF: ${{ images.train.ref }}
-      PACHY_PIPELINE_NAME: ${{ params.pachy_pipeline_name }}
-    bash: |
-      echo "IdentityFile ~/.ssh/id-rsa" > ~/.ssh/config
-      ssh-keyscan github.com 2>/dev/null >> ~/.ssh/known_hosts
-      git clone -b ${PROJECT_GIT_BRANCH} ${PROJECT_GIT_REPO} ${PROJECT}
-
-      # Init pachctl
-      pachctl config update context default --pachd-address ${PACHY_URI}
-      pachctl config set active-context default
-
-      # Store Neuro-flow batch and project definition base-64 encoded
-      BATCH_B64=$(cat ${PROJECT}/.neuro/training.yaml | base64 -w 0)
-      PROJECT_B64=$(cat ${PROJECT}/.neuro/project.yml | base64 -w 0)
-
-      # Substitue Neuro-flow batch parameters from job ENV vars and store them b64 encoded
-      PARAMS_B64=$(cat ${PROJECT}/.neuro/training-batch-params.yaml | envsubst | base64 -w 0)
-
-      # Create a copy of pipeline template
-      cp $${PROJECT}/config/pipeline.json /tmp/pipeline.json
-      sed -i -e s/##NEURO_PASSED_CONFIG##/${NEURO_PASSED_CONFIG}/ /tmp/pipeline.json
-      # Probagate project and batch definition and its parameters into the Pachyderm pypeline definition
-      sed -i -e s/##PROJECT_B64##/${PROJECT_B64}/ -e s/##BATCH_B64##/${BATCH_B64}/ -e s/##PARAMS_B64##/${PARAMS_B64}/ /tmp/pipeline.json
-      # Set the pipeline name
-      sed -i -e s/##PIPELINE_NAME##/${PACHY_PIPELINE_NAME}/ /tmp/pipeline.json
-
-      # Create pipeline
-      pachctl list pipeline $PACHY_PIPELINE_NAME >/dev/null && pachctl delete pipeline $PACHY_PIPELINE_NAME >/dev/null
-      pachctl create pipeline -f /tmp/pipeline.json
-      echo "Pipeline '${PACHY_PIPELINE_NAME}' created successfully."
-
   prepare_remote_dataset:
     name: $[[ flow.title ]]-prepare-dataset
     image: neuromation/neuro-extras:20.12.15
@@ -120,30 +70,25 @@ jobs:
     name: $[[ flow.title ]]-extend-data
     image: $[[ images.train.ref ]]
     detach: False
+    pass_config: True
     volumes:
       - ${{ volumes.remote_dataset.ref_ro }}
       - secret:gh-rsa:/root/.ssh/id-rsa
     env:
       PROJECT: /usr/project
       PYTHONPATH: /usr/project
-      PACHY_TOKEN: secret:pachyderm-token
     params:
       extend_dataset_by:
         default: "1"
         descr: |
           How many new images to add into current dataset.
     bash: |
-      echo "IdentityFile ~/.ssh/id-rsa" > ~/.ssh/config
-      ssh-keyscan github.com >> ~/.ssh/known_hosts
-      git clone -b ${PROJECT_GIT_BRANCH} ${PROJECT_GIT_REPO} ${PROJECT}
+      git clone -b ${PROJECT_GIT_BRANCH} ${PROJECT_GIT_REPO} ${PROJECT} > /dev/null 2>&1
 
-      # Init pachctl
-      pachctl config update context default --pachd-address ${PACHY_URI}
-      pachctl config set active-context default
-      echo "${PACHY_TOKEN}" | pachctl auth use-auth-token
-
-      export DATA_PATH=${PROJECT}/data/Images
-      pachctl get file ${PACHY_REPO}@master:/data/Images -r -o ${DATA_PATH} | tee || true # if head is empty
+      export DATA_PATH=${PROJECT}/data/images
+      mkdir -p $DATA_PATH
+      [[ -z $(neuro blob ls blob:${BUCKET_NAME}) ]] && echo "Bucket is empty" \
+        || neuro blob cp -rT blob:${BUCKET_NAME} $(dirname ${DATA_PATH}) # download data if the bucket is not empty
 
       echo "Extending dataset"
       python ${PROJECT}/label_studio/extend_dataset.py \
@@ -151,13 +96,11 @@ jobs:
         --full_dataset ${{ volumes.remote_dataset.mount }}/images/Images/ \
         --nmber_of_imgs ${{ params.extend_dataset_by }}
 
-      # Push dataset
-      pachctl put file -r ${PACHY_REPO}@master:data/Images/ -f ${DATA_PATH}/ | tee
-
+      echo "Uploading updated dataset to S3"
+      neuro blob cp -ru ${DATA_PATH} blob:${BUCKET_NAME}
 
       # Validate dataset:
-      pachctl list commit ${PACHY_REPO}@master
-      echo "Total images: $(pachctl list file ${PACHY_REPO}@master:data/Images | grep 'file' | wc -l)"
+      echo "Total images: $(neuro blob ls -r blob:${BUCKET_NAME} | grep -oP '\w*\.\w+$' | wc -l)" # grep files only
 
   label_studio:
     image: $[[ images.label_studio.ref ]]
@@ -165,6 +108,7 @@ jobs:
     http_port: 443
     http_auth: False
     life_span: 1d
+    pass_config: True
     detach: False
     browse: True
     volumes:
@@ -173,24 +117,16 @@ jobs:
       PROJECT: /usr/project
       LABEL_STUDIO_LOCAL_FILES_SERVING_ENABLED: True
       LABEL_STUDIO_PROJECT: /label-studio-project
-      PACHY_TOKEN: secret:pachyderm-token
       LS_TOKEN: secret:ls-token
       LS_PORT: 443
     bash: |
-      echo "Downloading base dataset"
-      echo "IdentityFile ~/.ssh/id-rsa" > ~/.ssh/config
-      ssh-keyscan github.com >> ~/.ssh/known_hosts
+      # required for pipx
+      export PATH=/root/.local/bin:$PATH
       git clone -b ${PROJECT_GIT_BRANCH} ${PROJECT_GIT_REPO} ${PROJECT}
 
-      # Init pachctl
-      pachctl config update context default --pachd-address ${PACHY_URI}
-      echo "${PACHY_TOKEN}" | pachctl auth use-auth-token
-
-      export DATA_PATH=${PROJECT}/data/Images
       COMPLETIONS=${LABEL_STUDIO_PROJECT}/completions
-      # Pull dataset:
-      pachctl get file ${PACHY_REPO}@master:/data/ -r -o ${PROJECT}/data/ | tee
 
+      neuro blob cp blob:${BUCKET_NAME}/label_studio.sqlite3 "${PROJECT}/data/label_studio.sqlite3"
       if [[ -f "${PROJECT}/data/label_studio.sqlite3" ]];
       then
         echo Restoring existing label studio data
@@ -202,23 +138,27 @@ jobs:
                 --label-config ${PROJECT}/label_studio/LabelConfig.xml
       fi
 
+      export S3_CREDENTIALS=$(neuro blob statcredentials $CREDENTIALS)
+      export BUCKET=$(neuro blob statcredentials $CREDENTIALS | grep bucket_name | awk '{print $2}')
+      export REGION=$(neuro blob statcredentials $CREDENTIALS | grep region_name | awk '{print $2}')
+      export ENDPOINT=$(neuro blob statcredentials $CREDENTIALS | grep endpoint_url | awk '{print $2}')
+      export KEY_ID=$(neuro blob statcredentials $CREDENTIALS | grep access_key_id | awk '{print $2}')
+      export KEY=$(neuro blob statcredentials $CREDENTIALS | grep secret_access_key | awk '{print $2}')
 
       echo "Starting label-studio"
       python3 ${PROJECT}/label_studio/launch_ls.py \
         --project_root ${PROJECT} \
+        --bucket ${BUCKET} \
+        --region_name ${REGION} \
+        --s3_endpoint ${ENDPOINT} \
+        --aws_access_key_id ${KEY_ID} \
+        --aws_secret_access_key ${KEY} \
         -- \
         start dogs --port ${LS_PORT} --no-browser
 
-      # Push labeling completions (label studio-specific files), images and annotation results
-      pachctl start commit ${PACHY_REPO}@master
-      pachctl put file -r ${PACHY_REPO}@master:data/Images/ -f ${DATA_PATH} | tee
-      pachctl put file    ${PACHY_REPO}@master:data/result.json -f ${PROJECT}/data/result.json | tee
-      pachctl put file    ${PACHY_REPO}@master:data/label_studio.sqlite3 -f /label-studio/data/label_studio.sqlite3 | tee
-      pachctl finish commit ${PACHY_REPO}@master -m "Commit annotations for `ls ${COMPLETIONS} | wc -l` images"
 
-      # Validate dataset:
-      pachctl list commit ${PACHY_REPO}@master
-      echo "Total images: $(pachctl list file ${PACHY_REPO}@master:data/Images | grep 'file' | wc -l)"
+      neuro blob cp ${PROJECT}/data/result.json blob:${BUCKET_NAME}
+      neuro blob cp /label-studio/data/label_studio.sqlite3 blob:${BUCKET_NAME}
 
   deploy_inference_platform:
     image: $[[ images.seldon.ref ]]
@@ -283,10 +223,10 @@ jobs:
       mlflow_storage:
         descr: Storage path, where MLFlow server stores model binaries
     bash: |
-      # Init pachctl
-      pachctl config update context default --pachd-address ${PACHY_URI}
-      pachctl inspect repo ${PACHY_REPO} || pachctl create repo ${PACHY_REPO}
-      pachctl get file ${PACHY_REPO}@master:/data/Images -r ${PROJECT}/data/Images | tee
+      export DATA_PATH=${PROJECT}/data/images
+      mkdir -p $DATA_PATH
+      [[ -z $(neuro blob ls blob:${BUCKET_NAME}) ]] && echo "Bucket is empty" \
+        || neuro blob cp -r blob:${BUCKET_NAME} $(dirname ${DATA_PATH}) # download data if the bucket is not empty
 
       jupyter notebook  \
         --no-browser \
@@ -304,6 +244,31 @@ jobs:
     action: gh:neuro-actions/filebrowser@v1.0.1
     args:
       volumes_project_remote: storage:$[[ flow.flow_id ]]
+
+  train:
+    image: $[[ images.train.ref ]]
+    preset: cpu-medium
+    life_span: 10d
+    volumes:
+      - storage:${{ flow.flow_id }}/mlruns:/usr/local/share/mlruns
+      - secret:/$[[ project.owner ]]/gh-rsa:/root/.ssh/id-rsa
+    env:
+      EXPOSE_SSH: "yes"
+      PYTHONPATH: /usr/project
+      PROJECT: /usr/project
+    pass_config: True
+    bash: |
+      git clone -b ${PROJECT_GIT_BRANCH} ${PROJECT_GIT_REPO} ${PROJECT}
+
+      # Pull dataset:
+      export DATA_PATH=${PROJECT}/data/images
+      mkdir -p $DATA_PATH
+      [[ -z $(neuro blob ls blob:${BUCKET_NAME}) ]] && echo "Bucket is empty" \
+        || neuro blob cp -r blob:${BUCKET_NAME} $(dirname ${DATA_PATH}) # download data if the bucket is not empty
+
+      python -u ${PROJECT}/src/train.py \
+        --data_dir ${PROJECT}/data/${BUCKET_NAME}/images \
+        --data_description ${PROJECT}/data/${BUCKET_NAME}/result.json
 
   postgres:
     image: postgres:12.5
