--- a/.neuro/training.yaml
+++ b/.neuro/training.yaml
@@ -27,7 +27,7 @@ tasks:
       PYTHONPATH: /usr/project
       PROJECT: /usr/project
       PACHY_URI: ${{ params.pachy_uri }}
-      PACHY_REPO: dogs-demo
+      PACHY_REPO: onprem-dogs
       MLFLOW_TRACKING_URI: ${{ params.mlflow_uri }}
       PROJECT_GIT_REPO: ${{ params.project_git_repo }}
       PROJECT_GIT_BRANCH: ${{ params.project_git_branch }}
