--- a/.neuro/live.yml
+++ b/.neuro/live.yml
@@ -69,6 +69,7 @@ jobs:
       NEURO_PASSED_CONFIG: secret:platform-config
       TRAIN_IMAGE_REF: ${{ images.train.ref }}
       PACHY_PIPELINE_NAME: ${{ params.pachy_pipeline_name }}
+      PACHY_TOKEN: secret:pachyderm-token
     bash: |
       echo "IdentityFile ~/.ssh/id-rsa" > ~/.ssh/config
       ssh-keyscan github.com 2>/dev/null >> ~/.ssh/known_hosts
@@ -77,7 +78,7 @@ jobs:
       # Init pachctl
       pachctl config update context default --pachd-address ${PACHY_URI}
       pachctl config set active-context default
-      pachctl inspect repo ${PACHY_REPO} || pachctl create repo ${PACHY_REPO}
+      echo "${PACHY_TOKEN}" | pachctl auth use-auth-token
 
       # Store Neuro-flow batch and project definition base-64 encoded
       BATCH_B64=$(cat ${PROJECT}/.neuro/training.yaml | base64 -w 0)
@@ -127,6 +128,7 @@ jobs:
     env:
       PROJECT: /usr/project
       PYTHONPATH: /usr/project
+      PACHY_TOKEN: secret:pachyderm-token
     params:
       extend_dataset_by:
         default: "1"
@@ -140,7 +142,7 @@ jobs:
       # Init pachctl
       pachctl config update context default --pachd-address ${PACHY_URI}
       pachctl config set active-context default
-      pachctl inspect repo ${PACHY_REPO}
+      echo "${PACHY_TOKEN}" | pachctl auth use-auth-token
 
       export DATA_PATH=${PROJECT}/data/Images
       pachctl get file ${PACHY_REPO}@master:/data/Images -r -o ${DATA_PATH} | tee || true # if head is empty
@@ -173,6 +175,7 @@ jobs:
     env:
       PROJECT: /usr/project
       LABEL_STUDIO_PROJECT: /label-studio-project
+      PACHY_TOKEN: secret:pachyderm-token
     bash: |
       echo "Downloading base dataset"
       echo "IdentityFile ~/.ssh/id-rsa" > ~/.ssh/config
@@ -181,8 +184,8 @@ jobs:
 
       # Init pachctl
       pachctl config update context default --pachd-address ${PACHY_URI}
-      pachctl inspect repo ${PACHY_REPO} || pachctl create repo ${PACHY_REPO}
-      
+      echo "${PACHY_TOKEN}" | pachctl auth use-auth-token
+
       export DATA_PATH=${PROJECT}/data/Images
       COMPLETIONS=${LABEL_STUDIO_PROJECT}/completions
       # Pull dataset:
@@ -306,8 +309,6 @@ jobs:
     image: postgres:12.5
     name: $[[ flow.title ]]-postgres
     preset: cpu-small
-    http_port: 5432
-    http_auth: False
     life_span: 30d
     detach: True
     volumes:
