--- a/.neuro/project.yml
+++ b/.neuro/project.yml
@@ -1,3 +1,3 @@
 id: mlops_demo_oss_dogs
-owner: yevheniisemendiak
-role: yevheniisemendiak/projects/mlops_demo_oss_dogs
+owner: kctest5
+role: kctest5/projects/mlops_demo_oss_dogs
