--- a/.neuro/training.yaml
+++ b/.neuro/training.yaml
@@ -7,38 +7,30 @@ defaults:
     strategy: none
 
 params:
-  train_image_ref: ~
   mlflow_storage: ~
   mlflow_uri: ~
-  pachy_uri: ~
 
 tasks:
   - id: train
-    image: $[[ params.train_image_ref ]]
+    image: $[[ images.train.ref ]]
     preset: cpu-medium
     life_span: 10d
     volumes:
       - ${{ params.mlflow_storage }}:/usr/local/share/mlruns:rw
-      - secret:/$[[ project.owner ]]/gh-rsa:/root/.ssh/id-rsa
+      - ${{ volumes.project.ref }}
     env:
       EXPOSE_SSH: "yes"
       PYTHONPATH: /usr/project
-      PROJECT: /usr/project
-      PACHY_URI: ${{ params.pachy_uri }}
-      PACHY_REPO: dogs-demo
-      MLFLOW_TRACKING_URI: ${{ params.mlflow_uri }}
-      PROJECT_GIT_REPO: ${{ params.project_git_repo }}
-      PROJECT_GIT_BRANCH: ${{ params.project_git_branch }}
-      PACHY_TOKEN: secret:pachyderm-token
     bash: |
-        git clone -b ${PROJECT_GIT_BRANCH} ${PROJECT_GIT_REPO} ${PROJECT}
+      # Init pachctl
+      pachctl config update context default --pachd-address ${PACHY_URI}
+      pachctl config set active-context default
 
-        # Init pachctl
-        pachctl config update context default --pachd-address ${PACHY_URI}
-        pachctl config set active-context default
-        # Pull dataset:
-        pachctl get file ${PACHY_REPO}@master:/data/ -r -o ${PROJECT}/data/ | tee
-        ls -R ${PROJECT}/data
-        python -u ${PROJECT}/src/train.py \
-          --data_dir ${PROJECT}/data/Images \
-          --data_description ${PROJECT}/data/result.json
+      # Pull dataset:
+      pachctl get file ${PACHY_REPO}@master:/data/ -r -o ${PROJECT}/data/ | tee
+
+      ls -R ${{ volumes.project.mount }}/data
+
+      python -u {{ volumes.project.mount }}/src/train.py \
+        --data_dir {{ volumes.project.mount }}/data/Images \
+        --data_description {{ volumes.project.mount }}/data/result.json
