--- a/.neuro/live-pachyderm.yml
+++ b/.neuro/live-pachyderm.yml
@@ -29,6 +29,7 @@ jobs:
     pass_config: True
     volumes:
       - ${{ volumes.remote_dataset.ref_ro }}
+      - ${{ upload(volumes.config).ref_ro }}
       - ${{ upload(volumes.label_studio).ref_ro }}
     env:
       PROJECT: /usr/project
@@ -40,6 +41,7 @@ jobs:
           How many new images to add into current dataset.
     bash: |
       export DATA_PATH=${PROJECT}/data/Images
+      mkdir -p ${DATA_PATH}
 
       # Init pachctl
       pachctl config update context default --pachd-address ${PACHY_URI}
@@ -69,6 +71,7 @@ jobs:
     detach: False
     browse: True
     volumes:
+      - ${{ upload(volumes.config).ref_ro }}
       - ${{ upload(volumes.label_studio).ref_ro }}
     env:
       PROJECT: /usr/project
@@ -83,6 +86,7 @@ jobs:
       pachctl get file ${PACHY_REPO}@master:/data/ -r -o ${PROJECT}/data/ | tee
 
       COMPLETIONS=${LABEL_STUDIO_PROJECT}/completions
+      mkdir -p ${COMPLETIONS}
 
       if [[ -f "${PROJECT}/data/label_studio.sqlite3" ]];
       then
@@ -131,7 +135,7 @@ jobs:
       - ${{ params.mlflow_storage }}/0/${{ params.run_id }}/artifacts/model/data/model.h5:/storage/model.h5
 
   locust:
-    image: locustio/locust:1.4.1
+    image: locustio/locust:2.8.5
     name: $[[ flow.title ]]-locust
     http_port: 8080
     http_auth: False
@@ -239,23 +243,19 @@ jobs:
     params:
       mlflow_storage:
         descr: Storage path, where MLFlow server stores trained model binaries
-      mlflow_uri:
-        descr: MLFlow server URI
       pachy_pipeline_name:
         default: train-dogs
         descr: MLFlow server URI
     env:
       EXPOSE_SSH: "yes"
       PYTHONPATH: /usr/project
-      MLFLOW_STORAGE: ${{ params.mlflow_storage }}
-      MLFLOW_URI: ${{ params.mlflow_uri }}
       NEURO_PASSED_CONFIG: secret:platform-config
-      TRAIN_IMAGE_REF: ${{ images.train.ref }}
       PACHY_PIPELINE_NAME: ${{ params.pachy_pipeline_name }}
     bash: |
       # Init pachctl
       pachctl config update context default --pachd-address ${PACHY_URI}
       pachctl config set active-context default
+      pachctl inspect repo "${PACHY_REPO}" || pachctl create repo "${PACHY_REPO}"
 
       # Store Neuro-flow batch and project definition base-64 encoded
       BATCH_B64=$(cat ${{ volumes.project.mount }}/.neuro/training.yaml | base64 -w 0)
@@ -268,7 +268,7 @@ jobs:
       cp ${{ volumes.project.mount }}/config/pipeline.json /tmp/pipeline.json
       sed -i -e s/##NEURO_PASSED_CONFIG##/${NEURO_PASSED_CONFIG}/ /tmp/pipeline.json
 
-      # Probagate project and batch definition and its parameters into the Pachyderm pypeline definition
+      # Propagate project and batch definition and its parameters into the Pachyderm pypeline definition
       sed -i -e s/##PROJECT_B64##/${PROJECT_B64}/ -e s/##BATCH_B64##/${BATCH_B64}/ -e s/##PARAMS_B64##/${PARAMS_B64}/ /tmp/pipeline.json
 
       # Set the pipeline name
